# info2-20261

./: CMakeLists.txt  fichas.cpp  fichas.h  funciones_tablero.cpp  funciones_tablero.h  main.cpp
